--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -60,17 +60,24 @@
     align-items: center;
 }
 
-.user-component__phone span{
-    margin-top: 5px;
-    margin-left: 7px;
-    width: 7px;
-    height: 7px;
-    padding: 3px 5px 4px 3px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgb(230, 68, 68);
-    color: rgb(230, 68, 68);
-    font-size: 13px;
+.user-component__subtitle .fa-exclamation-circle{
+    color: tomato;
+}
+
+@keyframes rotateIcons {
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-2px) scale(1.1);
+        color: tomato;
+    }
+    0%{
+        transform: none;
+    }
+}
+
+.more-screen i:hover{
+    will-change: transform;
+    animation: rotateIcons 1.5s linear infinite;
 }
